Add block_override, access_list, authorization_list fields in the new API definition
